criação header e seção 1, e aplicação responsivo

--- a/index.html
+++ b/index.html
@@ -12,11 +12,60 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
     
-    <title>Document</title>
+    <title>Danki Code</title>
 </head>
 
 
 <body>
+
+    <header>
+
+        <div class="container">
+            <div class="logo"></div> <!--logo-->
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+
+            <div class="clear"></div>
+
+            <div class="chamada1">
+                <h2>Sistemas próprios <br> para empresas autênticas</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eget lobortis magna. Donec eros elit, condimentum molestie convallis vitae, pellentesque et mauris.</p>
+            </div> <!--chamada1-->
+
+        </div> <!--container-->
+
+    </header>
+
+
+    <section class="sessao1">
+        <div class="container">
+
+            <div class="texto-sessao1">
+                <h2>Desenvolvendo sistemas únicos</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <ul>
+                    <li>Sites institucionais</li>
+                    <li>Lojas virtuais</li>
+                    <li>Sistemas corporativos</li>
+                    <li>Muitos outros</li>
+                </ul>
+                <div class="clear"></div>
+                <div class="btn-texto1">
+                    Entre em contato
+                </div><!--btn-texto1-->
+            </div><!--texto-sessao1-->
+            <div class="device-sessao1"></div><!--device-sessao1-->
+
+            <div class="clear"></div>
+
+        </div> <!--container-->
+    </section> <!--sessao1-->
     
 </body>
 
