criação menu responsivo para mobile e início criação da seção 2

--- a/index.html
+++ b/index.html
@@ -22,14 +22,23 @@
 
         <div class="container">
             <div class="logo"></div> <!--logo-->
-            <nav>
+            <nav class="desktop-menu">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
-            </nav>
+            </nav><!--desktop-menu-->
+
+            <nav class="mobile-menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav><!--mobile-menu-->
 
             <div class="clear"></div>
 
@@ -66,6 +75,17 @@
 
         </div> <!--container-->
     </section> <!--sessao1-->
+
+
+    <section class="sessao2">
+        <div class="container">
+
+            <h2>Desenvolvido de pessoas para pessoas</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae mollis quam. Praesent malesuada laoreet sapien, sit amet venenatis lectus pharetra a. Vivamus egestas porttitor mi sed tempus. </p>
+            <img src="./assets/img/programador.png" alt="Imagem de programador">
+
+        </div> <!--container-->
+    </section><!--sessao2-->
     
 </body>
 
