criação da seção 3

--- a/index.html
+++ b/index.html
@@ -86,6 +86,42 @@
 
         </div> <!--container-->
     </section><!--sessao2-->
+
+
+    <section class="sessao3">
+
+        <div class="parte1">
+            <div class="wraper-parte1">
+                <h2>Nosso time</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae mollis quam. Praesent malesuada laoreet sapien, sit amet venenatis lectus pharetra a. Vivamus egestas porttitor mi sed tempus. </p>
+            </div><!--wraper-parte1-->
+        </div><!--parte1-->
+
+        <div class="parte2">
+            <div class="sobre-autor">
+
+                <div class="titulo-autor">                    
+                    <div class="wraper-titulo-autor">
+                        <h2>Diansley Fernandes de Lima</h2>
+                        <p>Desenvolvedor Front-End</p>
+                    </div><!--wraper-titulo-autor-->
+                    <div class="img-autor"></div>
+                </div><!--titulo-autor-->
+
+                <div class="texto-autor">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae mollis quam. Praesent malesuada laoreet sapien, sit amet venenatis lectus pharetra a. Vivamus egestas porttitor mi sed tempus. </p>
+                </div><!--texto-autor-->
+
+            </div><!--sobre-autor-->
+
+            <div class="slider-bullets">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div><!--slider-bullets-->
+        </div><!--parte2-->
+
+    </section><!--sessao3-->
     
 </body>
 
