--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
             </div><!--slider-bullets-->
         </div><!--parte2-->
 
+        <div class="clear"></div>
+
     </section><!--sessao3-->
     
 </body>
