criação da sessão 4 e aplicação do responsivo

--- a/index.html
+++ b/index.html
@@ -140,17 +140,23 @@
                     <input type="text" name="nome" placeholder="Nome*">
                     <input type="email" name="e-mail" placeholder="E-mail*">
                     <textarea name="mensagem" placeholder="Mensagem*"></textarea>
+                    <div class=""></div>
                     <input type="submit" value="Enviar">
 
                 </form>
 
             </div><!--form-->
 
-            <div class="map">
 
-                
+            <div class="map-wraper">
+                <h2>Faça uma visita</h2>
+                <div class="map-wraper3">
+                    <div class="map-wraper2">
+                        <div id="map" class="map"></div><!--map-->
+                    </div> <!--map-wraper2-->
+                </div><!--map-wraper3-->
+            </div><!--map-wraper-->
 
-            </div>
 
             <div class="clear"></div>
 
