inserção imagem logo e criação footer

--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
 </body>
 
 
+<footer>
+    <div class="container">
+        <p>Todos os direitos reservados</p>
+        <p>diansley2@hotmail.com</p>
+        <div class="clear"></div><!--clear-->
+    </div><!--container-->
+</footer>
+
+
 <script src="./assets/js/script.js"></script>
 
 </html>
